Update KubeLB integration
Signed-off-by: Waleed Malik <ahmedwaleedmalik@gmail.com>

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -2934,8 +2934,16 @@ spec:
                     KubeLB holds the configuration for the kubeLB component.
                     Only available in Enterprise Edition.
                   properties:
+                    enableGatewayAPI:
+                      description: EnableGatewayAPI is used to configure the use of gateway API for kubeLB.
+                      type: boolean
                     enabled:
                       description: Controls whether kubeLB is deployed or not.
+                      type: boolean
+                    useLoadBalancerClass:
+                      description: |-
+                        UseLoadBalancerClass is used to configure the use of load balancer class `kubelb` for kubeLB. If false, kubeLB will manage all load balancers in the
+                        user cluster irrespective of the load balancer class.
                       type: boolean
                   required:
                     - enabled
