--- a/hack/versions.yaml
+++ b/hack/versions.yaml
@@ -138,6 +138,13 @@ products:
           package: k8c.io/kubermatic/v2/pkg/controller/user-cluster-controller-manager/resources/resources/metrics-server
           constant: imageTag
 
+  - name: KubeLB (Enterprise Edition)
+    source: https://github.com/kubermatic/kubelb
+    occurrences:
+      - goConstant:
+          package: k8c.io/kubermatic/v2/pkg/ee/kubelb/resources/seed-cluster
+          constant: imageTag
+          
   - name: KubeOne
     source: https://github.com/kubermatic/kubeone
     occurrences:
