--- a/hack/versions.yaml
+++ b/hack/versions.yaml
@@ -315,3 +315,10 @@ products:
     source: https://github.com/dexidp/dex
     occurrences:
       - helmChart: { directory: charts/oauth }
+
+  - name: Flatcar Linux Update Operator
+    source: https://github.com/flatcar/flatcar-linux-update-operator
+    occurrences:
+      - goConstant:
+          package: k8c.io/kubermatic/v2/pkg/controller/user-cluster-controller-manager/flatcar/resources
+          constant: operatorVersion
