--- a/.golangci.yml
+++ b/.golangci.yml
@@ -145,7 +145,7 @@ linters-settings:
       - pkg: sigs.k8s.io/controller-runtime/pkg/client
         alias: ctrlruntimeclient
       # Misc
-      - pkg: github.com/kubermatic/machine-controller/pkg/apis/cluster/v1alpha1
+      - pkg: k8c.io/machine-controller/pkg/apis/cluster/v1alpha1
         alias: clusterv1alpha1
       - pkg: github.com/Masterminds/semver/v3
         alias: semverlib
