Allow setting the value for ingressClassName in IAP
Signed-off-by: archups <archupsawant@gmail.com>

--- a/charts/iap/test/values.custom-tls-secret.yaml
+++ b/charts/iap/test/values.custom-tls-secret.yaml
@@ -35,3 +35,5 @@ iap:
         host: "grafana.kubermatic.tld"
         tlsSecretName: "custom-tls"
         annotations: {}
+        ## Optional: Default set to "nginx"
+        class: "nginx"
