Allow setting the value for ingressClassName in IAP (#13716)
* Allow setting the value for ingressClassName in IAP

Signed-off-by: archups <archupsawant@gmail.com>

* Fixed default value

Signed-off-by: archups <archupsawant@gmail.com>

---------

Signed-off-by: archups <archupsawant@gmail.com>

--- a/charts/iap/templates/ingresses.yaml
+++ b/charts/iap/templates/ingresses.yaml
@@ -35,7 +35,7 @@ metadata:
 {{ toYaml .ingress.annotations | indent 4 }}
 {{- end }}
 spec:
-  ingressClassName: nginx
+  ingressClassName: {{ .ingress.class | default "nginx" }}
   tls:
   {{- if .ingress.tlsSecretName }}
   - secretName: {{ .ingress.tlsSecretName }}
