--- a/docs/zz_generated.seed.ce.yaml
+++ b/docs/zz_generated.seed.ce.yaml
@@ -310,7 +310,7 @@ spec:
           # and networking features, see https://metal.equinix.com/developers/docs/locations/metros/
           metro: ""
         # Optional: ProviderReconciliationInterval is the time that must have passed since a
-        # Cluster's status.lastProviderReconciliation to make the cliuster controller
+        # Cluster's status.lastProviderReconciliation to make the cluster controller
         # perform an in-depth provider reconciliation, where for example missing security
         # groups will be reconciled.
         # Setting this too low can cause rate limits by the cloud provider, setting this
