--- a/pkg/ee/default-application-catalog/applicationdefinitions/cert-manager-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/cert-manager-app.yaml
@@ -41,7 +41,7 @@ spec:
           chartVersion: v1.14.1
           url: https://charts.jetstack.io
     version: v1.14.1
-  defaultValues:
+  defaultValuesBlock: |
     installCRDs: true
   documentationURL: https://cert-manager.io/
   sourceURL: https://github.com/cert-manager/cert-manager
