--- a/pkg/ee/default-application-catalog/applicationdefinitions/k8sgpt-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/k8sgpt-app.yaml
@@ -34,7 +34,7 @@ spec:
             chartVersion: 0.1.0
             url: https://charts.k8sgpt.ai/
       version: v0.3.26
-  defaultValues:
+  defaultValuesBlock: |
     serviceMonitor:
       enabled: false
       additionalLabels: {}
