support zone-aware topologies in csi driver

--- a/addons/csi/kubevirt/csi-driver-operator.yaml
+++ b/addons/csi/kubevirt/csi-driver-operator.yaml
@@ -84,11 +84,25 @@ spec:
                         objects. May match selectors of replication controllers and
                         services.
                       type: object
+                    regions:
+                      description: Regions represents a larger domain, made up of
+                        one or more zones. It is uncommon for Kubernetes clusters
+                        to span multiple regions
+                      items:
+                        type: string
+                      type: array
                     volumeBindingMode:
                       description: VolumeBindingMode indicates how PersistentVolumeClaims
                         should be provisioned and bound. When unset, VolumeBindingImmediate
                         is used.
                       type: string
+                    zones:
+                      description: Zones represent a logical failure domain. It is
+                        common for Kubernetes clusters to span multiple zones for
+                        increased availability
+                      items:
+                        type: string
+                      type: array
                   required:
                   - infraStorageClassName
                   type: object
@@ -344,7 +358,7 @@ spec:
         runAsNonRoot: true
       containers:
         - name: manager
-          image: {{ Image "quay.io/kubermatic/kubevirt-csi-driver-operator:b18d6898dcb32dc06c2093b3ad99d564b16686d7" }}
+          image: {{ Image "quay.io/kubermatic/kubevirt-csi-driver-operator:56c18cb61cf2581a696eefbbcd55c27a9c789ec2" }}
           imagePullPolicy: Always
           command:
             - /manager
@@ -385,6 +399,14 @@ spec:
      isDefaultClass: {{ .IsDefaultClass }}
      volumeBindingMode: {{ .VolumeBindingMode }}
      bus: scsi
+     regions:
+{{- range .Regions }}
+      - {{ . }}
+{{- end }}
+     zones:
+{{- range .Zones }}
+      - {{ . }}
+{{- end }}
      labels:
 {{- range $key, $value := .Labels }}
        {{ $key }}: {{ $value }}
