--- a/docs/zz_generated.seed.ce.yaml
+++ b/docs/zz_generated.seed.ce.yaml
@@ -206,9 +206,15 @@ spec:
               # storageclass.kubernetes.io/is-default-class : false
               isDefaultClass: true
               name: rook-ceph-block
+              # Regions represents a larger domain, made up of one or more zones. It is uncommon for Kubernetes clusters
+              # to span multiple regions
+              regions: null
               # VolumeBindingMode indicates how PersistentVolumeClaims should be provisioned and bound. When unset,
               # VolumeBindingImmediate is used.
               volumeBindingMode: null
+              # Zones represent a logical failure domain. It is common for Kubernetes clusters to span multiple zones
+              # for increased availability
+              zones: null
           # NamespacedMode represents the configuration for enabling the single namespace mode for all user-clusters in the KubeVirt datacenter.
           namespacedMode: null
         # Optional: MachineFlavorFilter is used to filter out allowed machine flavors based on the specified resource limits like CPU, Memory, and GPU etc.
