Equinix Metal: use modern env names for downstream components like KubeOne or MC (#13825)
* use modern env names for downstream components like KubeOne or MC

* codegen

--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clustertemplates.yaml
@@ -1281,7 +1281,7 @@ spec:
                         - subnetID
                       type: object
                     packet:
-                      description: Packet defines the configuration data of a Packet cloud.
+                      description: Packet defines the configuration data of a Packet / Equinix Metal cloud.
                       properties:
                         apiKey:
                           type: string
